[package]
name = "micro-rdk-esp32-sensor-examples"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Morrow <andrew.morrow@viam.com>"]
resolver = "2"

[dependencies]
log = "0.4"
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"], version = "0.1.9-rc2", rev = "3aae9aa"}

[package.metadata.com.viam]
module = true
